--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,7 @@ block content
 
     ul
       li #[strong Games:] !{data.game_count}
-      li #[strong Copies:] !{data.game_instance_count}
+      //- li #[strong Copies:] !{data.game_instance_count}
       li #[strong Copies available:] !{data.game_instance_available_count}
       li #[strong Studios:] !{data.studio_count}
       li #[strong Genres:] !{data.genre_count}
