--- a/views/game_detail.pug
+++ b/views/game_detail.pug
@@ -3,10 +3,10 @@ extends layout
 block content
   h1 Title: #{game.title}
 
-  p #[strong Studio:]
-    #{game.studio.name}
+  p #[strong Studio:] 
+    a(href=game.studio.url) #{game.studio.name}
   p #[strong Summary:] #{game.summary}
-  p #[strong Genre:]
+  p #[strong Genre: ]
     each val, index in game.genre
       a(href=val.link) #{val.name}
       if index < game.genre.length - 1
@@ -23,7 +23,8 @@ block content
         p.text-danger #{val.status}
       else
         p.text-warning #{val.status}
-      p #[strong Imprint:] #{val.imprint}
+      p #[strong Price: ] $#{val.price}
+      p #[strong In-stock: ] #{val.inStock}
       if val.status!='Available'
         p Game is not available
       p #[strong Id:]
@@ -31,3 +32,10 @@ block content
 
     else
       p There are no copies of this game in the inventory.
+    
+  hr
+  p 
+    a(href=game.url+'/delete') Delete Game
+  p 
+    a(href=game.url+'/update') Update Game
+
