--- a/views/genre_list.pug
+++ b/views/genre_list.pug
@@ -5,7 +5,7 @@ block content
 
   ul
     each genre in genre_list
-      li
-        #{genre.name}
+      li 
+        a(href=genre.url) #{genre.name}
     else
       li There are no genres.
