--- a/views/layout.pug
+++ b/views/layout.pug
@@ -33,7 +33,7 @@ html(lang='en')
               li
                 a(href='/catalog/game/create') Add new game
               li
-                a(href='/catalog/gameinstance/create') Add new game instance (copy)
+                a(href='/catalog/gameinstance/create') Add new game instance 
 
         div(class='col-sm-10')
           block content
