--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -15,4 +15,9 @@ block content
         dd #{game.summary}
 
       else
-        p This genre has no games
+        p This genre has no games.
+  hr
+  p 
+    a(href=genre.url+'/delete') Delete genre 
+  p 
+    a(href=genre.url+'/update') Update genre
