--- a/views/index.pug
+++ b/views/index.pug
@@ -13,8 +13,8 @@ block content
     p Your inventory currently has the following record counts:
 
     ul
-      li #[strong Games:] !{data.game_count}
+      li #[strong All games:] !{data.game_count}
       //- li #[strong Copies:] !{data.game_instance_count}
-      li #[strong Copies available:] !{data.game_instance_available_count}
-      li #[strong Studios:] !{data.studio_count}
+      li #[strong Games available:] !{data.game_instance_available_count}
+      li #[strong Studios/Developers:] !{data.studio_count}
       li #[strong Genres:] !{data.genre_count}
