--- a/views/game_delete.pug
+++ b/views/game_delete.pug
@@ -41,6 +41,10 @@ block content
     
     form(method='POST' action='')
       div.form-group
+        label(for='password') Enter admin password
+        br
+        input(name='password' type='text' required=true)
+        br
         input#id.form-control(type='hidden',name='id', required='true', value=game._id )
 
       button.btn.btn-primary(type='submit') Delete
