--- a/views/game_form.pug
+++ b/views/game_form.pug
@@ -26,6 +26,10 @@ block content
           div(style='display: inline; padding-right:10px;')
             input.checkbox-input(type='checkbox', name='genre', id=genre._id, value=genre._id, checked=genre.checked )
             label(for=genre._id) #{genre.name}
+    label(for='password') Enter admin password 
+    br
+    input(name='password' type='text' required=true)
+    br
     button.btn.btn-primary(type='submit') Submit
 
   if errors
