--- a/views/gameinstance_form.pug
+++ b/views/gameinstance_form.pug
@@ -35,6 +35,11 @@ block content
       label(for='inStock') Number in stock:
       input#inStock.form-control(type='number', name='inStock' value=(undefined===gameinstance ? '' : gameinstance.inStock))
 
+    label(for='password') Enter admin password 
+    br
+    input(name='password' type='text' required=true)
+    br
+    
     button.btn.btn-primary(type='submit') Submit
 
   if errors
