--- a/views/genre_form.pug
+++ b/views/genre_form.pug
@@ -7,6 +7,10 @@ block content
     div.form-group
       label(for='name') Genre:
       input#name.form-control(type='text', placeholder='Action, RPG, etc.' name='name' value=(undefined===genre ? '' : genre.name))
+      br
+      label(for='password') Enter admin password 
+      br
+      input(name='password' type='text' required=true)
     button.btn.btn-primary(type='submit') Submit
 
   if errors
